--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
         <div class="nav-middle">
           <ul>
             <li>home</li>
-            <li>reservations</li>
-            <li>menu</li>
-            <li>blog</li>
-            <li>pages</li>
-            <li>shop</li>
-            <li>contact</li>
+            <li><a href="#R">reservations</a></li>
+            <li><a href="#M">menu</a></li>
+            <li><a href="#B">blog</a></li>
+            <li><a href="#E">events</a></li>
+            <li><a href="#S">shop</a></li>
+            <li><a href="#C">contact</a></li>
           </ul>
         </div>
         <div class="nav-right">
@@ -48,7 +48,7 @@
         </div>
       </div>
     </header>
-    <section class="section1">
+    <section id="#S" class="section1">
       <div class="section1-left">
         <h3>our store</h3>
         <img
@@ -69,7 +69,7 @@
       <div class="section1-right"></div>
     </section>
 
-    <section id="P" class="section2">
+    <section id="M" class="section2">
       <div class="section2-container">
         <div class="section2-top">
           <img src="./assets/img/ic-plate.png" alt="fourchette et spoon" />
@@ -233,7 +233,7 @@
       <h2>our event</h2>
       <img src="./assets/img/ic-plate.png" alt="Fourchette et spoon" />
 
-      <div class="section4-container">
+      <div id="E" class="section4-container">
         <div class="box1">
           <div class="date-container">
             <div class="date">
@@ -297,7 +297,7 @@
       </div>
     </section>
 
-    <section class="section5">
+    <section id="B" class="section5">
       <div class="comment-container">
         <div class="comment">
           <p>
@@ -314,7 +314,7 @@
       </div>
     </section>
 
-    <footer>
+    <footer id="C">
       <div class="footer-grid">
         <div class="footer-left">
           <h2>Resto</h2>
