--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="welcome-container">
           <h1>the resto</h1>
           <img
-            src="./assets/img/ic-plate-big.png"
+            src="./assets/image/ic-plate-big.png"
             alt="petite icone de fourchette et spoon"
           />
           <p>we serve only the freshest ingredients !</p>
@@ -53,7 +53,7 @@
         <h3>our store</h3>
         <img
           id="icon"
-          src="./assets/img/ic-plate.png"
+          src="./assets/image/ic-plate.png"
           alt="petite icone de fourchette et spoon"
         />
         <p>
@@ -62,7 +62,7 @@
           consectetur, rerum dignissimos aperiam esse cum in, repellendus
           aliquid labore praesentium dolorum recusandae. Fuga labore quam magni.
         </p>
-        <img id="chef" src="./assets/img/avatar-01.jpg" alt="image du chef" />
+        <img id="chef" src="./assets/image/avatar-01.jpg" alt="image du chef" />
         <h4 id="chefname">Nacha Seveux</h4>
         <h5>chef cook</h5>
       </div>
@@ -72,7 +72,7 @@
     <section id="M" class="section2">
       <div class="section2-container">
         <div class="section2-top">
-          <img src="./assets/img/ic-plate.png" alt="fourchette et spoon" />
+          <img src="./assets/image/ic-plate.png" alt="fourchette et spoon" />
 
           <ul>
             <li>Breakfast</li>
@@ -85,7 +85,7 @@
         <div class="section2-bottom">
           <div class="plat">
             <img
-              src="./assets/img/dish-item-01.jpg"
+              src="./assets/image/dish-item-01.jpg"
               alt="présentation de l'assiette"
             />
             <div class="nom-du-plat">
@@ -97,7 +97,7 @@
           </div>
           <div class="plat">
             <img
-              src="./assets/img/dish-item-02.jpg"
+              src="./assets/image/dish-item-02.jpg"
               alt="présentation de l'assiette"
             />
             <div class="nom-du-plat">
@@ -109,7 +109,7 @@
 
           <div class="plat">
             <img
-              src="./assets/img/dish-item-03.jpg"
+              src="./assets/image/dish-item-03.jpg"
               alt="présentation de l'assiette"
             />
             <div class="nom-du-plat">
@@ -120,7 +120,7 @@
           </div>
           <div class="plat">
             <img
-              src="./assets/img/dish-item-04.jpg"
+              src="./assets/image/dish-item-04.jpg"
               alt="présentation de l'assiette"
             />
             <div class="nom-du-plat">
@@ -131,7 +131,7 @@
           </div>
           <div class="plat">
             <img
-              src="./assets/img/dish-item-05.jpg"
+              src="./assets/image/dish-item-05.jpg"
               alt="présentation de l'assiette"
             />
             <div class="nom-du-plat">
@@ -142,7 +142,7 @@
           </div>
           <div class="plat">
             <img
-              src="./assets/img/dish-item-06.jpg"
+              src="./assets/image/dish-item-06.jpg"
               alt="présentation de l'assiette"
             />
             <div class="nom-du-plat">
@@ -153,7 +153,7 @@
           </div>
           <div class="plat">
             <img
-              src="./assets/img/dish-item-07.jpg"
+              src="./assets/image/dish-item-07.jpg"
               alt="présentation de l'assiette"
             />
             <div class="nom-du-plat">
@@ -164,7 +164,7 @@
           </div>
           <div class="plat">
             <img
-              src="./assets/img/dish-item-08.jpg"
+              src="./assets/image/dish-item-08.jpg"
               alt="présentation de l'assiette"
             />
             <div class="nom-du-plat">
@@ -181,7 +181,7 @@
         <div class="section3-left">
           <div class="section3-left-container">
             <h3>open</h3>
-            <img src="./assets/img/ic-plate.png" alt="fourchette et spoon" />
+            <img src="./assets/image/ic-plate.png" alt="fourchette et spoon" />
             <h4>monday - friday</h4>
             <p>
               7AM-11AM (Breakfast) <br />
@@ -197,7 +197,7 @@
         </div>
         <div class="section3-right">
           <h3>online booking</h3>
-          <img src="./assets/img/ic-plate.png" alt="fourchette et spoon" />
+          <img src="./assets/image/ic-plate.png" alt="fourchette et spoon" />
 
           <div class="form-booking">
             <select name id="people">
@@ -231,7 +231,7 @@
 
     <section class="section4">
       <h2>our event</h2>
-      <img src="./assets/img/ic-plate.png" alt="Fourchette et spoon" />
+      <img src="./assets/image/ic-plate.png" alt="Fourchette et spoon" />
 
       <div id="E" class="section4-container">
         <div class="box1">
