--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Resto - the best restaurant in Paris</title>
-    <link rel="stylesheet" href="./style/index.css" />
+    <link rel="stylesheet" href="./assets/style/index.css" />
     <link rel="shortcut icon" href="./assets/img/ic-plate.png" />
 
     <link
