--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>The Resto - the best restaurant in Paris</title>
     <link rel="stylesheet" href="./assets/style/index.css" />
     <link rel="shortcut icon" href="./assets/img/ic-plate.png" />
+    <link rel="icon" href="./assets/image/ic-plate.png" />
 
     <link
       rel="stylesheet"
